Fixed hamburger menu color and alignment of buttons on landing page

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ div#site-title a:hover {
     margin-right: 1em;
 }
 
+i.icon-menu {
+    color: #d11710;
+}
+
 /* Search bar styling */
 
 #access > div > ul > li.menu-search-animated {
@@ -82,6 +86,10 @@ a.staticslider-button:nth-child(2n):hover {
     color: #FFFDFF !important;
     border-color: #FFFDFF;
     background-color: transparent;
+}
+
+a.staticslider-button {
+    margin: 2em 1em 0em 0em !important;
 }
 
 /* Styling for links across the site */
